change google service json

--- a/app/src/main/res/layout/fragment_daily.xml
+++ b/app/src/main/res/layout/fragment_daily.xml
@@ -32,6 +32,11 @@
                     android:textColor="@color/grey"
                     android:textSize="18sp" />
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/ourdoes"/>
+
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cvtoday"
                     android:layout_width="match_parent"
