--- a/app/src/main/res/layout/task_row.xml
+++ b/app/src/main/res/layout/task_row.xml
@@ -3,67 +3,71 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_margin="20dp"
+    android:clickable="true"
     android:elevation="0dp"
-    app:cardCornerRadius="0dp"
-    android:clickable="true">
+    app:cardBackgroundColor="#FFFFFF"
+    app:cardCornerRadius="8dp">
 
     <LinearLayout
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="4"
+        android:background="#00FFFFFF"
+        android:backgroundTint="#00FFFFFF"
         android:orientation="horizontal"
-        android:padding="15dip">
-
+        android:padding="15dip"
+        android:weightSum="4">
 
 
         <!--  ListRow Left sied Thumbnail image -->
-        <LinearLayout android:id="@+id/thumbnail"
-            android:visibility="visible"
+        <LinearLayout
+            android:id="@+id/thumbnail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="3dip">
+            android:padding="3dip"
+            android:visibility="visible">
+
             <TextView
                 android:id="@+id/task_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
-                android:textColor="#444444"
                 android:text="o"
-                android:textSize="20sp"/>
+                android:textColor="#444444"
+                android:textSize="20sp"
+                android:visibility="visible" />
         </LinearLayout>
 
 
-        <LinearLayout android:id="@+id/centerContent"
-            android:visibility="visible"
+        <LinearLayout
+            android:id="@+id/centerContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
             android:layout_marginLeft="10dp"
+            android:layout_weight="4"
             android:orientation="vertical"
-            >
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/taskname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="visible"
-                android:textColor="#8D8D8D"
+                android:layout_marginBottom="2dp"
                 android:drawablePadding="10dp"
                 android:text="Task Name here"
+                android:textColor="#8D8D8D"
                 android:textSize="16sp"
-                android:layout_marginBottom="2dp"/>
+                android:visibility="visible" />
 
             <TextView
                 android:id="@+id/taskdesc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="#676464"
                 android:text="Number Task"
-                android:typeface="sans"
-                android:textSize="14sp"/>
+                android:textColor="#676464"
+                android:textSize="14sp"
+                android:typeface="sans" />
         </LinearLayout>
 
     </LinearLayout>
