--- a/app/src/main/res/layout/task_row.xml
+++ b/app/src/main/res/layout/task_row.xml
@@ -3,10 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+    android:layout_marginVertical="6dp"
     android:clickable="true"
     android:elevation="0dp"
     app:cardBackgroundColor="#FFFFFF"
+    android:contextClickable="true"
     app:cardCornerRadius="8dp">
 
     <LinearLayout
